2012-12-28  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/mpatan.c (__mpatan): Remove
	__ATAN_TWOM.
	* sysdeps/ieee754/dbl-64/mpatan.h: Likewise.

	* sysdeps/ieee754/dbl-64/atnat.h: Replaced constants with
	their values.
	* sysdeps/ieee754/dbl-64/atnat2.h: Likewise.
	* sysdeps/ieee754/dbl-64/s_tan.c (tan): Likewise.
	* sysdeps/ieee754/dbl-64/ulog.h: Likewise.
	* sysdeps/ieee754/dbl-64/utan.h: Likewise.

2012-12-28  Andreas Jaeger  <aj@suse.de>

	* elf/elf.h (NT_S390_TDB, NT_FILE, NT_SIGINFO): Define.  New
	values are from Linux 3.7.

	* sysdeps/gnu/netinet/tcp.h (TCPI_OPT_SYN_DATA)
	(TCPI_OPT_ECN_SEEN): Define.  Sync with Linux 3.7.

2012-12-28  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* misc/sys/cdefs.h (__glibc_likely): Wrap __builtin_expect for
	TRUE case.

	* sysdeps/ieee754/dbl-64/mpa.c (norm): Define R as RADIXI.
	(norm): Likewise.
	* sysdeps/ieee754/dbl-64/mpa2.h: Remove all static const
	variables with preprocessor constants.
	* sysdeps/ieee754/dbl-64/mpatan.h: Likewise.
	* sysdeps/ieee754/dbl-64/mpexp.h: Likewise.
	* sysdeps/ieee754/dbl-64/mpsqrt.h: Likewise.

2012-12-27  Bruno Haible  <bruno@clisp.org>

	[BZ #14317]
	* string/xpg-strerror.c (__xpg_strerror_r): Optimize, call strlen
	only if needed.

2012-12-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/mpexp.c (__mpexp): Eliminate __mpexp_nn
	and use variable directly.
	* sysdeps/ieee754/dbl-64/mpexp.h (__mpexp_nn): Remove.

	* sysdeps/ieee754/dbl-64/mpa.c [! NO__CONST]: New constant
	MPONE.
	* sysdeps/ieee754/dbl-64/mpa.h: Declare MPONE.
	* sysdeps/ieee754/dbl-64/mpatan.c (__mpatan): Remove local
	variable MPONE.
	* sysdeps/ieee754/dbl-64/mpatan2.c (__mpatan2): Likewise.
	* sysdeps/ieee754/dbl-64/mpexp.c (__mpexp): Likewise.
	* sysdeps/ieee754/dbl-64/mplog.c (__mplog): Remove mplog.h
	include directive.  Remove local variable MPONE.
	* sysdeps/ieee754/dbl-64/mplog.h: Remove.
	* sysdeps/x86_64/fpu/multiarch/mpa-avx.c: Define NO__CONST.