@@ -1,3 +1,13 @@
+2012-12-29  Siddhesh Poyarekar  <siddhesh@redhat.com>
+
+	* sysdeps/ieee754/dbl-64/branred.h: Include dla.h.
+	(split): Use macro CN instead of the bare value.
+	* sysdeps/ieee754/dbl-64/dla.h: Add comment to explain why CN
+	could be used.
+	* sysdeps/ieee754/dbl-64/e_pow.c (__ieee754_pow): Use CN
+	instead of the bare value.
+	(power1): Likewise.
+
 2012-12-28  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
 	* sysdeps/ieee754/dbl-64/mpatan.c (__mpatan): Remove
